Kustomize/BASE/brave-services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: brave-browser
  name: brave-svc
  labels:
    app: brave
spec:
  selector:
    app: brave
  ports:
    - port: 5800
      name: vncweb
      targetPort: brave-ws
      protocol: TCP
  #type: NodePort
  type: LoadBalancer
  #loadBalancerIP: 192.168.0.10
